Add GET /orders/:userID endpoint in ecom service
