# ecom/main.go
@@ -8,8 +8,10 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/shahincsejnu/gocom/ecom/presenter/healthcheck"
+	"github.com/shahincsejnu/gocom/ecom/presenter/order"
 	"github.com/shahincsejnu/gocom/ecom/presenter/product"
 	"github.com/shahincsejnu/gocom/ecom/presenter/users"
+	orderuc "github.com/shahincsejnu/gocom/ecom/usecase/order"
 	productuc "github.com/shahincsejnu/gocom/ecom/usecase/product"
 	useruc "github.com/shahincsejnu/gocom/ecom/usecase/users"
 )
@@ -42,6 +44,7 @@ func newServer() (*http.Server, error) {
 	err = c.Invoke(func(
 		userUC *useruc.Usecase,
 		productUC *productuc.Usecase,
+		orderUC *orderuc.Usecase,
 	) {
 		r.GET("/", healthcheck.Handler())
 		r.GET("/users/:userID", users.GetOneHandler(userUC))
@@ -50,6 +53,7 @@ func newServer() (*http.Server, error) {
 		r.PATCH("/products/:productID", product.UpdateHandler(productUC))
 		r.GET("/products/:productID", product.GetOneHandler(productUC))
 		r.DELETE("/products/:productID", product.DeleteOneHandler(productUC))
+		r.GET("/orders/:userID", order.GetListHandler(orderUC))
 	})
 	if err != nil {
 		return nil, err
